<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings_menu"
        android:onClick="goToSettings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/night_mode_menu"
        android:checkable="true"
        android:onClick="toggleNightMode"
        android:title="@string/night_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_menu"
        android:onClick="goToAbout"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/share_menu"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never"/>
</menu>