<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_rounded_corners"
    android:id="@+id/dac">

    <TextView
        android:id="@+id/dac_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/addCalTitle"
        android:textColor="@color/darkText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dac_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/test_hint7"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dac_title"
        tools:ignore="LabelFor,UnusedAttribute" />

    <Button
        android:id="@+id/dac_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/layout_rounded_corners"
        android:contentDescription="@android:string/ok"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickedTextView" />

    <Button
        android:id="@+id/dac_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/layout_rounded_corners"
        android:contentDescription="@android:string/cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickedTextView"
        />

    <ImageButton
        android:id="@+id/dac_date_pick"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/layout_rounded_corners_for_imagebuttons"
        android:contentDescription="@string/chooseDate"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/dac_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dac_title"
        app:srcCompat="@drawable/baseline_calendar_today_black_48" />

    <TextView
        android:id="@+id/datePickedTextView"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/no_date_set"
        android:textColor="@color/darkText"
        app:layout_constraintEnd_toStartOf="@+id/dac_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dac_date_pick" />

</android.support.constraint.ConstraintLayout>