<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight">

    <ImageButton
        android:id="@+id/github_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="76dp"
        android:background="@null"
        android:contentDescription="@string/goToGithub"
        android:onClick="goToGithub"
        android:scaleType="centerInside"
        android:src="@drawable/github_mark"
        app:srcCompat="@drawable/github_mark" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="257dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/image_simple_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/app_logo"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="136dp"
        android:gravity="center"
        android:text="@string/about_jtodo"
        android:textColor="@color/darkText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/app_name_about_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/darkText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <ImageButton
        android:id="@+id/mailMeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="76dp"
        android:background="@null"
        android:contentDescription="@string/mailMe"
        android:onClick="mailMeAbout"
        app:srcCompat="@drawable/baseline_alternate_email_black_48" />

    <ImageButton
        android:id="@+id/goToWebButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="76dp"
        android:background="@null"
        android:contentDescription="@string/goToWeb"
        android:onClick="goToWeb"
        app:srcCompat="@drawable/baseline_language_black_48" />

</FrameLayout>