<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/super_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimarySuperLight"
        android:minHeight="?attr/actionBarSize"
        android:focusableInTouchMode="true"
        app:title="@string/app_name" />

    <include layout="@layout/content_main"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_action_add_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="370dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:visibility="invisible"
        app:backgroundTint="@color/colorLight"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/baseline_calendar_today_black_36" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_action_add_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:visibility="invisible"
        app:backgroundTint="@color/colorLight"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/baseline_location_on_black_36" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_action_add_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:visibility="invisible"
        app:backgroundTint="@color/colorLight"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/baseline_image_black_36" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_action_add_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:visibility="invisible"
        app:elevation="6dp"
        app:backgroundTint="@color/colorLight"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/baseline_toc_black_36" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_action_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:visibility="invisible"
        app:elevation="6dp"
        app:backgroundTint="@color/colorLight"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/baseline_add_black_36" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:elevation="6dp"
        app:backgroundTint="@color/colorPrimary"
        app:pressedTranslationZ="12dp"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/baseline_add_black_36" />

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:contentDescription="@string/description_zoom_touch_close" />

    <EditText
        android:id="@+id/entryEditTextMain"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/layout_rounded_corners_for_main_edit_text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:elevation="5dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textShortMessage|textAutoCorrect"
        android:hint="@string/typeHere"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

</android.support.design.widget.CoordinatorLayout>